@@ -90,6 +90,7 @@ Changelog for 1.3.32
 * Fixed cash transfer enforces ticked 'FX' boxes (Nick P, 802)
 * Fixed extra newline-related errors in tex template engine (Chris T)
 * Added updated Hungarian charts of accounts (Pongracz Istvan, 813)
+* Reopen books now works again (Chris T, 792)
 
 Nick P is Nick Prater
 
